crayfish-macros/tests/trybuild/args_err.stderr
error: attributes only applys to struct, enum.
 --> $DIR/args_err.rs:3:1
  |
3 | #[arg]
  | ^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
